tha commit is cashout.js or main balance from  mainas balance

--- a/main.html
+++ b/main.html
@@ -105,11 +105,11 @@
                     <label class="fieldset-label text-gray-800">Bank Account Number</label>
                     <input id="mobile-number" type="number" maxlength="11" class="input rounded-3xl" placeholder="Enter 11 digit account number" required />
                     <label class="fieldset-label text-gray-800">Amount</label>
-                    <input id="amount" type="number" class="input rounded-3xl" placeholder="Add Amount to withdraw" required />
+                    <input id="cashout-amount" type="number" class="input rounded-3xl" placeholder="Add Amount to withdraw" required />
                     <label class="fieldset-label text-gray-800">Pin Number</label>
-                    <input id="Pin-Number" type="number-text" class="input rounded-3xl" placeholder="Enter  Digit Pin" required />
+                    <input id="cashout-pin" type="number-text" class="input rounded-3xl" placeholder="Enter  Digit Pin" required />
                     <div><a class="link link-hover">Forgot password?</a></div>
-                    <button id="add-money" class="btn btn-neutral border-none rounded-3xl bg-blue-500 mt-4">Cashout</button>
+                    <button id="cashout-btn" type="submit" class="btn btn-neutral border-none rounded-3xl bg-blue-500 mt-4">Cashout</button>
                   </fieldset>
             </section>
 
@@ -120,5 +120,6 @@
     <!-- <script src="Script/addMoney.js"></script> -->
      <script src="Script/recap.js"></script>
      <script src="Script/toggle.js"></script>
+     <script src="Script/cashout.js"></script>
 </body>
 </html>
